--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="row">
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
-            <img class="img-responsive" src="aurel-hizmo.jpg" alt="">
+            <img class="img-responsive" src="img/aurel-hizmo.jpg" alt="">
                 <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Aurel Hizmo</b></div><br>
                 <p><b>aurel.hizmo@gmail.com</b><br>
                 </p>
